syntax = "proto3";

package proto;

option go_package = "./proto";

//Search
message SearchFundsRequest {
  string searchTerm = 1;
}
message SearchFundsResponse {
  repeated FilterFundsResponseEntry entries = 1;
}

//Details
message FundDetailsRequest {
  string fundId = 1;
}
message FundDetailsResponse {
  FundInformation information = 1;
  repeated FundSectorWeighting sectorWeightings = 2;
  repeated string sectors = 3;
  repeated FundHolding fundHoldings = 4;
}
message FundInformation{
  string id = 1;
  string name = 2;
  double outstandingShares = 3;
  string effectiveDate = 4;
}
message FundSectorWeighting {
  string sectorName = 1;
  double percentage = 2;
}

//Holdings
message FilterFundHoldingsRequest {
  string fundId = 1;
  string searchTerm = 2;
  repeated string selectedSectors = 3;
  int64 limit = 4;
  int64 offset = 5;
}
message FilterFundHoldingsResponse {
  repeated FundHolding entries = 1;
}
message FundHolding {
  string ticker = 1;
  string holdingId = 2;
  string holdingName = 3;
  double cumulativePercentage = 4;
}

//Filter
message FilterFundsRequest {
  string searchTerm = 1;
  string provider = 2;
  int64 limit = 3;
  int64 offset = 4;
}
message FilterFundsResponse {
  repeated FilterFundsResponseEntry entries = 1;
}
message FilterFundsResponseEntry {
  string id = 1;
  string name = 2;
  repeated string tickers = 3;
  double marketCap = 4;
  string currency = 5;
}
